# pi-llm-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  asr_server.py  config.example.yaml  config.yaml  embedding_client.py  embedding_server.py  embedding_test_data.py  mineru_server.sh  pi-llm-server.py  pi-llm-server.service  pyproject.toml  reranker_client.py  start_all_services.sh
backup/: asr_client.py  asr_client_qwen.py  asr_client_toolkit.py  asr_client_transformers.py  asr_server.py  asr_server_0.py  localai_client.py  mineru_parse.py  reranker_server.py  vllm_embedding_server.py  vllm_embedding_server_cpu.py
data/: test_data_search.json  test_data_similarity.json
doc/: DEPLOYMENT_FINAL_REPORT.md  MINERU_API_README.md  PYTHON_PACKAGE_REFACTOR_PLAN.md  QWEN3_ASR_README.md  QWEN3_EMBEDDING_06B_GUIDE.md  QWEN3_RERANKER_README.md  README_ASR.md  README_QWEN3_06B.md  README_services.md  api.md  note.md  pi-llm-server-arch.md  pi-llm-server-design.md  pi-memory-proxy.md  prompt.md  requirements_mineru.txt  requirements_pi_llm_server.txt  requirements_vllm.txt
doc/backup/: EMBEDDING_DEPLOYMENT.md  VLLM_EMBEDDING_README.md
examples/: basic_usage.py  config.example.yaml  pi-llm-server.service
pi_llm_server/: __init__.py  __main__.py  auth.py  cli.py  config.py  health_monitor.py  queue_manager.py  server.py
pi_llm_server/clients/: __init__.py  asr_client.py  embedding_client.py  mineru_client.py  reranker_client.py
pi_llm_server/examples/: __init__.py  basic_usage.py  config.example.yaml  install-service.sh  pi-llm-server.service.template
pi_llm_server/launcher/: __init__.py  asr_server.py  embedding_server.py  mineru_server.sh  reranker_server.py  service_daemon.py  service_manager.py
pi_llm_server/services/: __init__.py  asr.py  embedding.py  memory.py  mineru.py  reranker.py
pi_llm_server/utils/: __init__.py  exceptions.py  logging.py
scripts/: asr_client.py  embedding_client.py  embedding_server.py  mineru_client.py  mineru_server.sh  pi-llm-server.service  reranker_client.py  reranker_server.py  service_manager.py  start_all_services.sh
tests/: __init__.py  benchmark_asr_concurrent.py  benchmark_embedding.py  benchmark_embedding_batch.py  conftest.py  test-embedding-base64.js  test_all_apis.py  test_auth.py  test_cli_launch.py  test_config.py  test_full_stack.py  test_mineru_docx.py  test_queue.py  test_services.py  test_streaming_changes.py
