[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-llm-server"
version = "1.1.2"
description = "统一 LLM 服务网关 - 集成 Embedding、ASR、Reranker、MinerU 服务"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PI-Lab Team", email = "bushuhui@foxmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "python-multipart>=0.0.18",
    # 配置与数据验证
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # 工具库
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "orjson>=3.9.0",
    "supervisor>=4.2.0",
    "setproctitle>=1.3.0",
]

[project.optional-dependencies]
# =============================================
# 核心推理引擎
# =============================================
vllm = [
    "vllm>=0.14.0,<1.0.0",
]

# =============================================
# Embedding 服务依赖
# =============================================
embedding = [
    "sentence-transformers>=5.0.0",
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
    "torch>=2.0.0",
]

# =============================================
# Reranker 服务依赖
# =============================================
reranker = [
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
    "torch>=2.0.0",
]

# =============================================
# ASR 服务依赖
# =============================================
asr = [
    "qwen-asr[vllm]>=0.0.5",
    "silero-vad>=5.1.0",
    # 音频处理
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "onnxruntime-gpu>=1.16.0",
]

# =============================================
# MinerU 服务依赖
# =============================================
mineru = [
    "mineru>=2.0.0",
    "mineru-vl-utils>=0.1.0",
    "qwen-vl-utils>=0.0.10",
    # PDF 处理
    "pdfminer-six>=20240706",
    "pdftext>=0.6.0",
    "pypdf>=5.0.0",
    "pypdfium2>=4.30.0",
    "gradio-pdf>=0.0.20",
    # 文档布局分析
    "doclayout-yolo>=0.0.4",
    "ultralytics>=8.0.0",
    "ftfy>=6.0.0",
    "pyclipper>=1.2.0",
    "omegaconf>=2.3.0",
    # 图像处理
    "pillow>=10.0.0",
    "opencv-python-headless>=4.10.0",
    "scikit-image>=0.25.0",
    "albumentations>=2.0.0",
    # 文本处理
    "einops>=0.8.0",
    "shapely>=2.0.0",
]

# =============================================
# 模型相关
# =============================================
models = [
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
    "sentence-transformers>=5.0.0",
    "huggingface-hub>=0.30.0",
    "tokenizers>=0.20.0",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.0",
]

# =============================================
# 模型服务与 API
# =============================================
api = [
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "dashscope>=1.20.0",
    "modelscope>=1.15.0",
]

# =============================================
# 分布式与监控
# =============================================
monitoring = [
    "ray>=2.10.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sse-starlette>=2.0.0",
    "tiktoken>=0.7.0",
]

# =============================================
# 工具库扩展
# =============================================
utils = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "orjson>=3.9.0",
    "einops>=0.8.0",
    "shapely>=2.0.0",
    # 文件类型检测
    "magika>=1.0.0",
    # 语言检测
    "fast-langdetect>=0.2.0",
    # 文本处理
    "json-repair>=0.50.0",
    # 其他
    "supervisor>=4.2.0",
    "setproctitle>=1.3.0",
]

# =============================================
# 开发依赖
# =============================================
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

# =============================================
# MCP Server
# =============================================
mcp = [
    "mcp>=1.0.0",
]

# =============================================
# 全部依赖
# =============================================
all = [
    "pi-llm-server[vllm,embedding,reranker,asr,mineru,models,api,monitoring,utils,dev,mcp]",
]

[project.urls]
Homepage = "https://github.com/bushuhui/pi-llm-server"
Documentation = "https://pi-llm-server.readthedocs.io"
Repository = "https://github.com/bushuhui/pi-llm-server"
Changelog = "https://github.com/bushuhui/pi-llm-server/blob/main/CHANGELOG.md"

[project.scripts]
# 命令行入口点
pi-llm-server = "pi_llm_server.cli:main"

[tool.setuptools.package-data]
pi_llm_server = ["*.yaml", "*.yaml.example"]

[tool.setuptools.packages.find]
include = ["pi_llm_server*"]
